# IMAP-mail-transfer

./: .gitignore  CMakeLists.txt  README.md  imap.c  imap.h  main.c
docker/: docker-compose.yml
scripts/: seed_source.sh
src/: actions.c  actions.h  imap.c  imap.h  imap_parser.c  imap_parser.h  init.c  init.h  ncurses_helper.c  ncurses_helper.h
